--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/auth": "^21.14.0",
+    "@react-native-firebase/firestore": "^21.14.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.36",
+    "expo-auth-session": "^6.0.3",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
@@ -30,17 +35,20 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "firebase": "^11.6.0",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-calendars": "^1.1311.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
+    "react-native-webview": "^13.13.5",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
