--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/firestore": "^21.14.0",
+    "@react-native-firebase/messaging": "^21.14.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.36",
     "expo-auth-session": "^6.0.3",
     "expo-blur": "~14.0.1",
+    "expo-build-properties": "^0.13.2",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.0",
