--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,20 +3,13 @@
     "compilerOptions": {
         "strict": true,
         "paths": {
-        "@/*": [
-            "./*"
-        ]
+            "@/*": ["./*"]
         }
     },
-    "include": [
-        "**/*.ts",
-        "**/*.tsx",
-        ".expo/types/**/*.ts",
-        "expo-env.d.ts"
-    ],
+    "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"],
     "types": [
-      "@react-native-firebase/app",      
-      "@react-native-firebase/auth",
-      "@react-native-firebase/firestore"
+        "@react-native-firebase/app",
+        "@react-native-firebase/auth",
+        "@react-native-firebase/firestore"
     ]
 }
