--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@react-native-firebase/messaging": "^21.14.0",
         "@react-native-google-signin/google-signin": "^13.2.0",
         "@react-navigation/native": "^7.0.0",
+        "axios": "^1.9.0",
         "expo": "~52.0.36",
         "expo-auth-session": "^6.0.3",
         "expo-blur": "~14.0.1",
@@ -46,6 +47,7 @@
         "react-native-calendars": "^1.1311.0",
         "react-native-chart-kit": "^6.12.0",
         "react-native-gesture-handler": "~2.20.2",
+        "react-native-markdown-display": "^7.0.2",
         "react-native-safe-area-context": "4.12.0",
         "react-native-screens": "~4.4.0",
         "react-native-svg": "15.8.0",
