--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.6.0",
+    "immer": "^10.1.1",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
