--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/firestore": "^21.14.0",
@@ -20,23 +20,23 @@
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.9.0",
-    "expo": "~52.0.36",
-    "expo-auth-session": "^6.0.3",
+    "expo": "~52.0.46",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.1",
-    "expo-build-properties": "^0.13.2",
-    "expo-constants": "~17.0.7",
+    "expo-build-properties": "~0.13.3",
+    "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.0",
-    "expo-image": "~2.0.6",
+    "expo-image": "~2.0.7",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
-    "expo-location": "~18.0.7",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.22",
+    "expo-location": "~18.0.10",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.6.0",
     "immer": "^10.1.1",
@@ -44,7 +44,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-calendars": "^1.1311.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -54,11 +54,12 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.13.5",
+    "react-native-webview": "13.12.5",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/config-plugins": "~9.0.0",
     "@expo/ngrok": "^4.1.0",
     "@react-native-community/cli": "^18.0.0",
     "@types/react": "~18.3.12",
