--- a/package.json
+++ b/package.json
@@ -40,11 +40,15 @@
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.6.0",
     "immer": "^10.1.1",
+    "i18next": "^25.1.1",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-i18next": "^15.5.1",
     "react-native-calendars": "^1.1311.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
