--- a/app.json
+++ b/app.json
@@ -1,42 +1,42 @@
 {
-  "expo": {
-    "name": "expo-app",
-    "slug": "expo-app",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/images/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.anonymous.expoapp"
-    },
-    "plugins": [
-      "expo-router",
-      "expo-build-properties"
-    ],
-    "experiments": {
-      "typedRoutes": true
-    },
-    "extra": {
-      "router": {
-        "origin": false
-      },
-      "eas": {
-        "projectId": "90ea6b32-41e1-4a7c-a300-254c9c31e01c"
-      }
+    "expo": {
+        "name": "PetCare",
+        "slug": "petcare",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/images/icon.png",
+        "scheme": "petcare",
+        "userInterfaceStyle": "automatic",
+        "newArchEnabled": true,
+        "assetBundlePatterns": ["**/*", "locales/**/*.json"],
+        "splash": {
+            "image": "./assets/images/splash-icon.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "ios": {
+            "bundleDisplayName": "PetCare",
+            "supportsTablet": true
+        },
+        "android": {
+            "label": "PetCare",
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/images/adaptive-icon.png",
+                "backgroundColor": "#ffffff"
+            },
+            "package": "com.anonymous.expoapp"
+        },
+        "plugins": ["expo-router", "expo-build-properties"],
+        "experiments": {
+            "typedRoutes": true
+        },
+        "extra": {
+            "router": {
+                "origin": false
+            },
+            "eas": {
+                "projectId": "dda274ff-6231-447b-b04e-1aa7400747dd"
+            }
+        }
     }
-  }
 }
